--- a/QuantumultX_Cookie.conf
+++ b/QuantumultX_Cookie.conf
@@ -46,4 +46,5 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 #（其中https:\/\/cccat\.io需要替换为你自己的机场链接）
 
 #美团签到
-^https:\/\/i.meituan.com\/evolve\/signin\/signpost\/ url script-request-body meituan.cookie.js
+^https:\/\/i.meituan.com\/evolve\/signin\/signpost\/ url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.cookie.js
+
