--- a/QuantumultX_JS.conf
+++ b/QuantumultX_JS.conf
@@ -14,7 +14,7 @@ hostname = mp.weixin.qq.com, trade-acs.m.taobao.com, api.m.jd.com, *.amemv.com,a
 
 # 京东比价
 # ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/JDHelloWorld/jd_price/main/jd_price.js
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://cdn.jsdelivr.net/gh/JDHelloWorld/jd_price@main/jd_price.js
 
 # 淘宝比价
 # ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
