--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -17,7 +17,7 @@ profile_img_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/i
 server_check_url=http://www.gstatic.com/generate_204
 #第一个filter为4g模式开启规则分流，第二个filter为其他wifi下开启规则分流，第三个wifi1修改成你路由器翻墙的wifi名开启直连模式，第四个wifi2为你公司或者其他有路由器翻墙的WiFi名走直连）
 #默认关闭根据wifi切换模式，如需开启，删除下方的“#”即可！
-#running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_proxy
+#running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_direct
 
 [dns]
 no-ipv6
