--- a/QuantumultX_Cookie.conf
+++ b/QuantumultX_Cookie.conf
@@ -2,7 +2,7 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = api.m.jd.com, i.meituan.com, *.bilibili.com, music.163.com, act.10010.com, www.52pojie.cn, m.client.10010.com, iface?.iqiyi.com, nebula.kuaishou.com, trade-acs.m.taobao.com, mp.weixin.qq.com, *.amemv.com, ms.jr.jd.com, wapside.189.cn, wx.10086.cn, draw.jdfcloud.com, jdjoy.jd.com, commontgw6.reader.qq.com, eventv3.reader.qq.com
+hostname = api.m.jd.com, i.meituan.com, *.bilibili.com, music.163.com, act.10010.com, www.52pojie.cn, m.client.10010.com, iface?.iqiyi.com, nebula.kuaishou.com, trade-acs.m.taobao.com, mp.weixin.qq.com, ms.jr.jd.com, wapside.189.cn, wx.10086.cn, draw.jdfcloud.com, jdjoy.jd.com, commontgw6.reader.qq.com, eventv3.reader.qq.com
 
 #京东获取Cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
