--- a/loon_cookie.conf
+++ b/loon_cookie.conf
@@ -6,7 +6,7 @@
 
 # 使用方法:打开APP，顶部的配置 -> 脚本 -> 订阅脚本- > 点击右上角+号 -> 添加url链接 
 
-hostname = api.m.jd.com, draw.jdfcloud.com, ms.jr.id.com, i.meituan.com, *.bilibili.com, music.163.com, act.10010.com, m.client.10010.com, iface?.iqiyi.com, nebula.kuaishou.com, trade-acs.m.taobao.com, mp.weixin.qq.com, *.amemv.com, ms.jr.jd.com, wapside.189.cn, wx.10086.cn
+hostname = api.m.jd.com, draw.jdfcloud.com, ms.jr.id.com, i.meituan.com, *.bilibili.com, music.163.com, act.10010.com, m.client.10010.com, iface?.iqiyi.com, nebula.kuaishou.com, trade-acs.m.taobao.com, mp.weixin.qq.com, ms.jr.jd.com, wapside.189.cn, wx.10086.cn
 
 
 # 京东  （api.m.jd.com）
