--- a/loon_js.conf
+++ b/loon_js.conf
@@ -1,13 +1,13 @@
 #
-# Loon非签到类脚本订阅配置（例如京东、淘宝比价等） 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2020/10/20
+# Loon非签到类脚本订阅配置（例如京东、淘宝比价等） 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2021/9/24
 # GitHub主页(https://github.com/w37fhy/QuantumultX)
 
 hostname = trade-acs.m.taobao.com,api.m.jd.com, draw.jdfcloud.com, jdjoy.jd.com
 
 # 京东历史价格
-http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js, tag=京东历史价格
+http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) requires-body=1,script-path=https://service.2ti.st/QuanX/Script/jd_tb_price/main.js, tag=京东历史价格
 
 # 淘宝比价
-http-request ^http://.+/amdc/mobileDispatch script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js, requires-body=true, timeout=10, tag=淘宝历史价格1
-http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js, requires-body=true, timeout=10, tag=淘宝历史价格2
+http-request ^http://.+/amdc/mobileDispatch script-path=https://service.2ti.st/QuanX/Script/jd_tb_price/main.js, requires-body=true, timeout=10, tag=淘宝历史价格1
+http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail script-path=https://service.2ti.st/QuanX/Script/jd_tb_price/main.js, requires-body=true, timeout=10, tag=淘宝历史价格2
 
