--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -1,10 +1,7 @@
-# QuantumultX 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2022/10/15
+# QuantumultX 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2023/5/27
 # 【YouTube视频教程】 QuantumultX 系列教程：https://fhyurl.tk/quantumultx
 # 更新日志：
-# 1、增加韩国策略组、TikTok策略组
-# 2、移除网易云音乐相关策略组及分流规则
-# 3、增加策略组图标
-# 4、增加部分重写订阅、增加TikTok解锁对应分流规则及重写规则
+# 1、增加OpenAI分流和策略组
 
 
 [general]
@@ -34,11 +31,14 @@ url-latency-benchmark=韩国, server-tag-regex=(?=.*(KR|Korea|KOR|首尔|韩|韓
 url-latency-benchmark=新加坡, server-tag-regex=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 url-latency-benchmark=美国, server-tag-regex=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 static=TikTok, DIRECT, 香港, 台湾, 日本, 韩国, 新加坡, 美国, 节点选择, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
+static=OpenAI, DIRECT, 香港, 台湾, 日本, 韩国, 新加坡, 美国, 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bot.png
 static=漏网之鱼, 节点选择, 自动选择, 香港, 台湾, 日本, 韩国, 新加坡, 美国, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 [server_remote]
 
 [filter_remote]
+# OpenAI分流
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/OpenAI.list, tag=🤖OpenAI, force-policy=OpenAI, update-interval=172800, opt-parser=false, enabled=true
 # TikTok分流
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok.list, tag=🎯TikTok分流, force-policy=TikTok, update-interval=172800, opt-parser=false, enabled=true
 # Unbreak 后续规则修正
@@ -74,6 +74,7 @@ https://raw.githubusercontent.com/qiangxinglin/Emby/main/QuantumultX/emby.conf, 
 [server_local]
 
 [filter_local]
+host-suffix, sentry.io, reject
 host-keyword, exitgames.com, 节点选择
 host-suffix, bnbstatic.com, 节点选择
 host-suffix, local, direct
