--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -1,7 +1,8 @@
-# QuantumultX 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2023/5/27
+# QuantumultX 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2023/6/2
 # 【YouTube视频教程】 QuantumultX 系列教程：https://fhyurl.tk/quantumultx
 # 更新日志：
-# 1、增加OpenAI分流和策略组
+# 1. 增加OpenAI分流和策略组
+# 2. 增加Netflix分流和策略组
 
 
 [general]
@@ -32,7 +33,7 @@ url-latency-benchmark=新加坡, server-tag-regex=(?=.*(新加坡|狮城|SG|(?i)
 url-latency-benchmark=美国, server-tag-regex=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 static=TikTok, DIRECT, 香港, 台湾, 日本, 韩国, 新加坡, 美国, 节点选择, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
 static=OpenAI, DIRECT, 香港, 台湾, 日本, 韩国, 新加坡, 美国, 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bot.png
-static=Netfilx, server-tag-regex=/nf(?:etflix)?|奈/i, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Orz-3/mini/Color/Netflix.png
+static=Netfilx, server-tag-regex=(nf|解锁NF|NF|奈|Netflix), check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Orz-3/mini/Color/Netflix.png
 static=漏网之鱼, 节点选择, 自动选择, 香港, 台湾, 日本, 韩国, 新加坡, 美国, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 [server_remote]
