--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -1,8 +1,8 @@
-# QuantumultX 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2023/6/2
+# QuantumultX 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2024/6/2
 # 【YouTube视频教程】 QuantumultX 系列教程：https://fhyurl.tk/quantumultx
 # 更新日志：
-# 1. 增加OpenAI分流和策略组
-# 2. 增加Netflix分流和策略组
+# 1. 修改替换已失效的分流规则
+# 2. 增加新的分流规则
 
 
 [general]
@@ -41,6 +41,8 @@ static=漏网之鱼, 节点选择, 自动选择, 香港, 台湾, 日本, 韩国,
 [filter_remote]
 # OpenAI分流
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/OpenAI.list, tag=🤖OpenAI, force-policy=OpenAI, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/BardAI.list, tag=🤖OpenAI, force-policy=OpenAI, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/Claude.list, tag=🤖OpenAI, force-policy=OpenAI, update-interval=172800, opt-parser=false, enabled=true
 # TikTok分流
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok.list, tag=🎯TikTok分流, force-policy=TikTok, update-interval=172800, opt-parser=false, enabled=true
 # Unbreak 后续规则修正
