--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -51,7 +51,7 @@ https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/Tik
 # Unbreak 后续规则修正
 https://raw.githubusercontent.com/w37fhy/QuantumultX/master/Rules/Unbreak.list, tag=🎯规则修正-直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 # Advertising 广告
-https://raw.githubusercontent.com/w37fhy/QuantumultX/master/Rules/Advertising.list, tag=🛑轻量广告拦截-拒绝, force-policy=reject, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/w37fhy/QuantumultX/master/Rules/Advertising.list, tag=🛑轻量广告拦截-拒绝, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 # 微信直连
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=🎯微信直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 # NobyDa大佬去广告 -默认关闭，自行手动启用！
