--- a/QuantumultX_JS.conf
+++ b/QuantumultX_JS.conf
@@ -1,7 +1,7 @@
 hostname = trade-acs.m.taobao.com, api.m.jd.com
 
 # 京东比价
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/githubdulong/Script/master/jd_price.js
+#^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/githubdulong/Script/master/jd_price.js
 
 # 淘宝比价
 # ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/githubdulong/Script/master/tb_price.js
